# FileChif

./: .gitignore  README.md
.github/workflows/: build.yml
docs/: ACCEPTANCE_CHECKLIST.md  GITHUB_RELEASE.md  INTERNAL_INSTALL.md  KNOWN_LIMITS.md  README.md  RELEASE_NOTES.md  ROLLBACK.md  TROUBLESHOOTING.md
docs/milestones/: M1-规范基线建立-2026-05-08.md  M2-项目骨架启动-2026-05-08.md  M3-可用性增强-2026-05-08.md  M4-分发预览与发布准备-2026-05-08.md  M5-发布质量与正式分发准备-2026-05-08.md  M6-内部团队分发与维护自动化-2026-05-09.md  M7-产品化基础-2026-05-09.md  M7.5-界面体验精修-2026-05-09.md  M8-多输入转换能力-2026-05-09.md
docs/specs/: 01-product-scope.md  02-architecture.md  03-data-model.md  04-command-contract.md  05-template-spec.md  06-convert-pipeline.md  07-logging-error-spec.md  08-dev-standards.md
filechif/: README.md  index.html  package-lock.json  package.json
filechif/examples/: README.md  sample-report.md
filechif/scripts/: release_internal.sh  verify_dmg_install.sh
filechif/src/: App.tsx  styles.css
filechif/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
filechif/src-tauri/capabilities/: default.json
filechif/src-tauri/icons/: icon.icns
filechif/src-tauri/src/: commands.rs  error.rs  main.rs  models.rs
filechif/src/pages/: History.tsx  Settings.tsx  Workbench.tsx
